refactor: types, config and http handlers
