# src/app/api/feeds/addFeed.ts
@@ -1,0 +1,12 @@
+import * as feedModels from "@/models/feeds";
+import { Feed } from "@/types";
+
+export async function addFeed({ body }: { body: Feed }) {
+  const newFeed = await feedModels.addFeed(body);
+
+  return {
+    data: newFeed,
+    status: 201,
+    message: "Feed added",
+  };
+}
